--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     </code>
                 </pre>
             </section>
+            <footer>
+                <p>Documentation brought to you on the fly by Yerzhan Rsaliyev</p>
+            </footer>
         </main>
     </body>
 </html>
